# sacho-re

./: CLAUDE.md  README.md  dependencies.txt  diskcheck.ps1  package-lock.json  package.json  prototype.py  similarity.md
.claude/: settings.local.json
ffmpeg-build/: .gitignore  README.md  build.sh  install.sh
src/: app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  test_devices.example.toml  whatisthis.avif
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installers/: .gitkeep  README.md
src-tauri/installers/dlls/: check_codecs.ps1  check_licenses.ps1
src-tauri/installers/raw_dependencies/: check_deps.ps1
src-tauri/src/: autostart.rs  commands.rs  config.rs  gstreamer_init.rs  lib.rs  main.rs  notifications.rs  tray.rs
src-tauri/src/devices/: enumeration.rs  health.rs  mod.rs
src-tauri/src/encoding/: encoder.rs  mod.rs  presets.rs
src-tauri/src/recording/: midi.rs  mod.rs  monitor.rs  preroll.rs  video.rs
src-tauri/src/session/: database.rs  metadata.rs  mod.rs  storage.rs
src-tauri/src/similarity/: clustering.rs  features.rs  melody.rs  midi_parser.rs  mod.rs  reduction.rs  scoring.rs
src-tauri/src/test_harness/: app.rs  discovery.rs  midi_sender.rs  mod.rs  permutations.rs  runner.rs  validators.rs
src-tauri/src/video/: demux.rs  gst_decode.rs  mjpeg.rs  mod.rs
src-tauri/tools/: Cargo.toml
src-tauri/windows/: hooks.nsi
src/lib/: api.ts  midi-utils.ts  sounds.ts
src/lib/components/: About.svelte  RecordingIndicator.svelte  Settings.svelte
src/lib/components/devices/: DevicePanel.svelte  VideoConfigModal.svelte
src/lib/components/sessions/: SessionBrowser.svelte  SessionDetail.svelte  VideoPlayer.svelte
src/lib/components/similarity/: MidiFileDetail.svelte  RecordingNodeDetail.svelte  SimilarityMap.svelte  SimilarityTab.svelte
src/lib/stores/: devices.ts  navigation.ts  recording.ts  sessions.ts  settings.ts  similarity.ts
src/routes/: +page.svelte
tools/: inspect-video.ps1
