[package]
name = "sacho-tools"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "integration_tests"
path = "src/bin/integration_tests.rs"

[[bin]]
name = "encoder_benchmark"
path = "src/bin/encoder_benchmark.rs"

[dependencies]
sacho_lib = { path = "..", package = "sacho", features = ["test-harness"] }
tempfile = "3"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
